# wealthlab-ai

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 69f9a3e383e1_initial_schema.py
examples/: demo_fase1.py  demo_fase2.py  demo_fase3.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CorrelationHeatmap.tsx  ErrorState.tsx  FinalHistogram.tsx  InsightsPanel.tsx  KpiCard.tsx  MethodologyTab.tsx  MonteCarloFunnel.tsx  NavRail.tsx  NumberField.tsx  PlotlyChart.tsx  PortfolioEditor.tsx  RebalancePanel.tsx  ResultadoHero.tsx  RetirementPanel.tsx  RiskPanel.tsx  Sidebar.tsx  SimulationInputs.tsx  Skeletons.tsx  StressPanel.tsx  TickerAutocomplete.tsx  TrajectoryChart.tsx  WelcomePanel.tsx
frontend/src/hooks/: useRebalance.ts  useRetirement.ts  useSimulation.ts  (+2 more)
scripts/: seed_cache.py
tests/: conftest.py  test_api.py  test_domain.py  test_estimation.py  test_fixed_income.py  test_insights.py  test_metrics.py  test_performance.py  test_rebalance.py  test_retirement.py  test_returns.py  test_simulator.py  test_stress.py
wealthlab_api/: __init__.py  config.py  database.py  main.py  market.py  methodology.py  models.py  repository.py  schemas.py  services.py
wealthlab_api/routers/: methodology.py  portfolio.py  simulation.py
wealthlab_core/: __init__.py
wealthlab_core/domain/: __init__.py  assets.py  config.py  enums.py  fixed_income.py  plan.py
wealthlab_core/engine/: __init__.py  estimation.py  fixed_income.py  insights.py  metrics.py  rebalance.py  retirement.py  returns.py  simulator.py  stress.py
wealthlab_core/marketdata/: __init__.py  cache.py  provider.py  synthetic.py  yahoo.py
wealthlab_core/utils/: __init__.py  logging.py
(+20 files in other folders)
